<b>2010-01-13</b>

* Bugfix: Distance/duration display not getting cleared when exiting edit mode
* Bugfix: Facebook app "View map" link broken

<b>2010-01-08</b>

* Clean up GC rendering code a bit
* Bugfix: Loading selected airport actually works now
* Bugfix: Flights rendered by reported distance, not actual distance (2911041)
* Feature: Keep private trips really private (2924818)

<b>2010-01-07</b>

* Add airport search button to airport popups
* Selected airport loaded into search when clicking plane icon
* Allow prev/next through airport query results until user actually initiates a new search
* Cleaner handling of edit/non-edit mode for airport selection
* Unit test cases for PHP helper functions
* Bugfix: Airline editor bugs for user-entered airlines (2921315)

<b>2009-01-06</b>

* Facebook app migrated from template bundles to stream publishing
* Bugfix: Facebook caching buggy (2924046)

<b>2009-12-30</b>

* Assume two-char tabbed quick searches are airlines
* Added favicons for About, Donate, FAQ
* Bugfix: Completely reworked handling of tabs before autocompletion (2921386)
* Bugfix: Do not return airlines after a successful airport match in limit-1 quicksearch (2921386)
* Bugfix: Fix tabbed quick searches for airlines (2920325)

<b>2009-12-11</b>

* December route map update
* News separated from index.php

<b>2009-12-04</b>

* Bugfix: Fixed geographical (NASA) map layer

<b>2009-11-30</b>

* Bugfix: Tabs (and other whitespace) trimmed from flight number, seat, reg

<b>2009-10-22</b>

* Bugfix: Editing corrupted flight distances in km
* Bugfix: Around the world distance computed incorrectly for km (2826981)

<b>2009-10-21</b>

* Optimized 'main airport in cluster' algorithm (last is always largest)
* Add cluster mark, fix airport order in cluster tooltips

<b>2009-10-20</b>

* Upgraded to OpenLayers 2.8 RC5
* Added labels and tooltips to airports (2515935)
* Implemented clustering strategy
* Replaced NavToolbar control with Navigation control